test/visibility/import/enablesUnqualified/importAndImport2.good
importAndImport2.chpl:21: In function 'main':
importAndImport2.chpl:22: error: 'x' undeclared (first use this function)
